--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                     canSpin=false; canSolve=true; canVowel=false; canManual=true; 
                 }
             } else {
-                 spInfo.classList.add('hidden'); canSpin=true; canSolve=true; canVowel=true; canManual=true; 
+                 spInfo.classList.add('hidden'); canSpin=true; canSolve=true; canVowel=true; canManual=false; 
             }
 
             if(!isMe || isSpinning || inputMode) { canSpin=false; canSolve=false; canVowel=false; canFreeVowel=false; canPass=false; canManual=false; }
