--- a/index.html
+++ b/index.html
@@ -3110,7 +3110,7 @@ const showSurrender = isHost && (
       // ✅ Validazione OK - ora possiamo chiudere il campo
       closeInput();
       const myName=document.getElementById('inp-name').value;
-      const s=currentStanza;
+      // Usiamo 's' già dichiarato all'inizio della funzione
       
       
       if(isSpecialRound && specialVowelsPhase && mode==='vowel'){
