--- a/index.html
+++ b/index.html
@@ -178,16 +178,16 @@
     <button onclick="openActionHistory(true)" style="background:transparent; border:1px solid #555; color:#888; padding:5px 10px; border-radius:5px; font-size:0.8em;">Storico (A)</button>
   </div>
 
-  <audio id="snd-spin" src="sounds/ruota.wav"></audio>
-  <audio id="snd-hit" src="sounds/lettera presente.wav"></audio>
-  <audio id="snd-miss" src="sounds/lettera assente.wav"></audio>
-  <audio id="snd-turn" src="sounds/tocca_a_te.mp3"></audio>
-  <audio id="snd-bankrupt" src="sounds/bancarotta.mp3"></audio>
-  <audio id="snd-win" src="sounds/vittoria.mp3"></audio>
-  <audio id="snd-clap" src="sounds/applausi.mp3"></audio>
-  <audio id="snd-laugh" src="sounds/risata.mp3"></audio>
-  <audio id="snd-boo" src="sounds/buuu.mp3"></audio>
-  <audio id="snd-ooh" src="sounds/peccato.mp3"></audio>
+  <audio id="snd-spin" src="https://raw.githubusercontent.com/lellivalentina1992-lang/ruota/main/ruota.wav"></audio>
+  <audio id="snd-hit" src="https://raw.githubusercontent.com/lellivalentina1992-lang/ruota/main/lettera%20presente.wav"></audio>
+  <audio id="snd-miss" src="https://raw.githubusercontent.com/lellivalentina1992-lang/ruota/main/lettera%20assente.wav"></audio>
+  <audio id="snd-turn" src="https://raw.githubusercontent.com/lellivalentina1992-lang/ruota/main/tocca_a_te.mp3"></audio>
+  <audio id="snd-bankrupt" src="https://raw.githubusercontent.com/lellivalentina1992-lang/ruota/main/bancarotta.mp3"></audio>
+  <audio id="snd-win" src="https://raw.githubusercontent.com/lellivalentina1992-lang/ruota/main/vittoria.mp3"></audio>
+  <audio id="snd-clap" src="https://raw.githubusercontent.com/lellivalentina1992-lang/ruota/main/applausi.mp3"></audio>
+  <audio id="snd-laugh" src="https://raw.githubusercontent.com/lellivalentina1992-lang/ruota/main/risata.mp3"></audio>
+  <audio id="snd-boo" src="https://raw.githubusercontent.com/lellivalentina1992-lang/ruota/main/buuu.mp3"></audio>
+  <audio id="snd-ooh" src="https://raw.githubusercontent.com/lellivalentina1992-lang/ruota/main/peccato.mp3"></audio>
 
   <div id="setup-panel" class="container">
     <h1 style="color:var(--col-accent); font-size:3em; margin-bottom:10px; text-shadow:0 0 20px rgba(255,215,0,0.3);">LA RUOTA</h1>
@@ -401,9 +401,9 @@
         <li><strong>D</strong> o <strong>Ctrl+D</strong>: Ascolta punteggio (parziale e totale)</li>
         <li><strong>B</strong> o <strong>Ctrl+B</strong>: Aggiungi Bot veloce (Solo Host)</li>
         <li><strong>H</strong> o <strong>Ctrl+H</strong>: Aiuto</li>
-        <li><strong>I</strong>: Ispeziona parola (modalità accessibile) - Apre una finestra che mostra tutte le lettere della parola corrente, sia quelle trovate che quelle nascoste. Puoi cliccare su una lettera per selezionarla.</li>
+        <li><strong>I</strong> o <strong>Ctrl+I</strong>: Ispeziona parola (modalità accessibile) - Apre una finestra che mostra tutte le lettere della parola corrente, sia quelle trovate che quelle nascoste. Puoi cliccare su una lettera per selezionarla.</li>
         <li><strong>Spazio</strong>: Riapri ultimo input</li>
-        <li><strong>Frecce ↑↓←→ (NAVIGAZIONE DA PC)</strong>: 
+        <li><strong>Frecce ↑↓←→ (NAVIGAZIONE CON TASTIERA)</strong>: 
           <ul style="margin-top:8px; line-height:1.6;">
             <li><strong>Freccia DESTRA (→)</strong>: Passa al carattere successivo nella stessa parola</li>
             <li><strong>Freccia SINISTRA (←)</strong>: Torna al carattere precedente nella stessa parola</li>
