--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     font-src 'self' https://fonts.gstatic.com;
-    connect-src 'self' https://azcwkpdjbysnivknnino.supabase.co wss://azcwkpdjbysnivknnino.supabase.co;
+    connect-src 'self' https://azcwkpdjbysnivknnino.supabase.co wss://azcwkpdjbysnivknnino.supabase.co https://cdn.jsdelivr.net;
     img-src 'self' data: https:;
-    frame-ancestors 'none';
+    media-src 'self' data: blob:;
     base-uri 'self';
     form-action 'self';
   ">
@@ -167,9 +167,9 @@
       }
     },
     
-    TimerManager.clearInterval(id) {
+    clearInterval(id) {
       if (id) {
-        TimerManager.clearInterval(id);
+        clearInterval(id);
         this.intervals.delete(id);
       }
     },
