--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
     box.id = 'airbag-error-box';
     box.setAttribute('role', 'alertdialog');
     box.setAttribute('aria-modal', 'true');
-    box.setAttribute('aria-labelledby', 'error-title');
-    box.setAttribute('aria-describedby', 'error-desc');
+    box.setAttribute('aria-labelledby', 'error-title-async');
+    box.setAttribute('aria-describedby', 'error-desc-async');
     
     box.style.cssText = `
       position: fixed;
